--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     buildToolsVersion "22.0.1"
     dependencies {
         compile 'com.google.android.gms:play-services-maps:7.5.0'
+        compile 'com.google.maps.android:android-maps-utils:0.4+'
         apt "org.androidannotations:androidannotations:3.3.1"
         compile "org.androidannotations:androidannotations-api:3.3.1"
         compile 'com.mcxiaoke.volley:library:1.0.16'
@@ -14,7 +15,7 @@ android {
         applicationId "com.primankaden.stay63"
         minSdkVersion 9
         targetSdkVersion 22
-        versionCode 2
+        versionCode 3
         versionName "1.0"
     }
     buildTypes {
@@ -35,5 +36,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
 }
